y.output
Terminals unused in grammar

    MAIN


Rules useless in parser due to conflicts

   11 corpo: corpo corpo

   48 proposicao: ε

   49 desvioFluxo: IF condicao corpo
   50            | WHILE condicao corpo


State 5 conflicts: 9 shift/reduce
State 12 conflicts: 3 shift/reduce
State 17 conflicts: 9 shift/reduce
State 18 conflicts: 1 shift/reduce
State 19 conflicts: 9 shift/reduce
State 30 conflicts: 9 shift/reduce
State 32 conflicts: 9 shift/reduce
State 51 conflicts: 9 shift/reduce
State 54 conflicts: 9 reduce/reduce
State 55 conflicts: 9 shift/reduce, 9 reduce/reduce
State 60 conflicts: 9 shift/reduce, 9 reduce/reduce
State 68 conflicts: 9 shift/reduce, 9 reduce/reduce
State 72 conflicts: 9 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: lista_funcoes

    2 lista_funcoes: funcao
    3              | funcao lista_funcoes

    4 funcao: FN NOME lista_parametros corpo RETURN
    5       | FN NOME corpo RETURN

    6 lista_parametros: parametro
    7                 | parametro lista_parametros

    8 parametro: NOME

    9 corpo: expressoes
   10      | proposicao
   11      | corpo corpo

   12 expressoes: NOME binarias NOME
   13           | NOME binarias NUMERO
   14           | NUMERO binarias NUMERO
   15           | unarias NOME
   16           | unarias NUMERO

   17 declaracaoVariavel: VAR NOME NUMERO

   18 condicao: valor logicas valor

   19 binarias: LE
   20         | GE
   21         | EQ
   22         | NE
   23         | GT
   24         | LT
   25         | AND
   26         | OR
   27         | ADD
   28         | SUBTRACT
   29         | MULTIPLY
   30         | DIVIDE
   31         | MODULE

   32 unarias: SUBTRACT
   33        | NOT

   34 logicas: LE
   35        | GE
   36        | EQ
   37        | NE
   38        | GT
   39        | LT

   40 valor: NUMERO
   41      | NOME

   42 proposicao: declaracaoVariavel
   43           | atribuicao
   44           | desvioFluxo
   45           | valor ADDSUB
   46           | RETURN
   47           | funcao
   48           | ε

   49 desvioFluxo: IF condicao corpo
   50            | WHILE condicao corpo

   51 atribuicao: NOME NUMERO
   52           | NOME NOME


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FN (258) 4 5
    VAR (259) 17
    WHILE (260) 50
    IF (261) 49
    NUMERO (262) 13 14 16 17 40 51
    MAIN (263)
    NOME (264) 4 5 8 12 13 15 17 41 51 52
    LE (265) 19 34
    GE (266) 20 35
    EQ (267) 21 36
    NE (268) 22 37
    GT (269) 23 38
    LT (270) 24 39
    AND (271) 25
    OR (272) 26
    ADD (273) 27
    MULTIPLY (274) 29
    DIVIDE (275) 30
    MODULE (276) 31
    SUBTRACT (277) 28 32
    ADDSUB (278) 45
    NOT (279) 33
    RETURN (280) 4 5 46


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    programa (27)
        on left: 1
        on right: 0
    lista_funcoes (28)
        on left: 2 3
        on right: 1 3
    funcao (29)
        on left: 4 5
        on right: 2 3 47
    lista_parametros (30)
        on left: 6 7
        on right: 4 7
    parametro (31)
        on left: 8
        on right: 6 7
    corpo (32)
        on left: 9 10 11
        on right: 4 5 11 49 50
    expressoes (33)
        on left: 12 13 14 15 16
        on right: 9
    declaracaoVariavel (34)
        on left: 17
        on right: 42
    condicao (35)
        on left: 18
        on right: 49 50
    binarias (36)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 12 13 14
    unarias (37)
        on left: 32 33
        on right: 15 16
    logicas (38)
        on left: 34 35 36 37 38 39
        on right: 18
    valor (39)
        on left: 40 41
        on right: 18 45
    proposicao (40)
        on left: 42 43 44 45 46 47 48
        on right: 10
    desvioFluxo (41)
        on left: 49 50
        on right: 44
    atribuicao (42)
        on left: 51 52
        on right: 43


State 0

    0 $accept: • programa $end

    FN  shift, and go to state 1

    programa       go to state 2
    lista_funcoes  go to state 3
    funcao         go to state 4


State 1

    4 funcao: FN • NOME lista_parametros corpo RETURN
    5       | FN • NOME corpo RETURN

    NOME  shift, and go to state 5


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 6


State 3

    1 programa: lista_funcoes •

    $default  reduce using rule 1 (programa)


State 4

    2 lista_funcoes: funcao •
    3              | funcao • lista_funcoes

    FN  shift, and go to state 1

    $default  reduce using rule 2 (lista_funcoes)

    lista_funcoes  go to state 7
    funcao         go to state 4


State 5

    4 funcao: FN NOME • lista_parametros corpo RETURN
    5       | FN NOME • corpo RETURN

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 12
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 15

    FN        [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 48 (proposicao)]

    funcao              go to state 16
    lista_parametros    go to state 17
    parametro           go to state 18
    corpo               go to state 19
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 6

    0 $accept: programa $end •

    $default  accept


State 7

    3 lista_funcoes: funcao lista_funcoes •

    $default  reduce using rule 3 (lista_funcoes)


State 8

   17 declaracaoVariavel: VAR • NOME NUMERO

    NOME  shift, and go to state 27


State 9

   50 desvioFluxo: WHILE • condicao corpo

    NUMERO  shift, and go to state 28
    NOME    shift, and go to state 29

    condicao  go to state 30
    valor     go to state 31


State 10

   49 desvioFluxo: IF • condicao corpo

    NUMERO  shift, and go to state 28
    NOME    shift, and go to state 29

    condicao  go to state 32
    valor     go to state 31


State 11

   14 expressoes: NUMERO • binarias NUMERO
   40 valor: NUMERO •

    LE        shift, and go to state 33
    GE        shift, and go to state 34
    EQ        shift, and go to state 35
    NE        shift, and go to state 36
    GT        shift, and go to state 37
    LT        shift, and go to state 38
    AND       shift, and go to state 39
    OR        shift, and go to state 40
    ADD       shift, and go to state 41
    MULTIPLY  shift, and go to state 42
    DIVIDE    shift, and go to state 43
    MODULE    shift, and go to state 44
    SUBTRACT  shift, and go to state 45

    $default  reduce using rule 40 (valor)

    binarias  go to state 46


State 12

    8 parametro: NOME •
   12 expressoes: NOME • binarias NOME
   13           | NOME • binarias NUMERO
   41 valor: NOME •
   51 atribuicao: NOME • NUMERO
   52           | NOME • NOME

    NUMERO    shift, and go to state 47
    NOME      shift, and go to state 48
    LE        shift, and go to state 33
    GE        shift, and go to state 34
    EQ        shift, and go to state 35
    NE        shift, and go to state 36
    GT        shift, and go to state 37
    LT        shift, and go to state 38
    AND       shift, and go to state 39
    OR        shift, and go to state 40
    ADD       shift, and go to state 41
    MULTIPLY  shift, and go to state 42
    DIVIDE    shift, and go to state 43
    MODULE    shift, and go to state 44
    SUBTRACT  shift, and go to state 45

    NUMERO    [reduce using rule 8 (parametro)]
    NOME      [reduce using rule 8 (parametro)]
    SUBTRACT  [reduce using rule 8 (parametro)]
    ADDSUB    reduce using rule 41 (valor)
    $default  reduce using rule 8 (parametro)

    binarias  go to state 49


State 13

   32 unarias: SUBTRACT •

    $default  reduce using rule 32 (unarias)


State 14

   33 unarias: NOT •

    $default  reduce using rule 33 (unarias)


State 15

   46 proposicao: RETURN •

    $default  reduce using rule 46 (proposicao)


State 16

   47 proposicao: funcao •

    $default  reduce using rule 47 (proposicao)


State 17

    4 funcao: FN NOME lista_parametros • corpo RETURN

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 15

    FN        [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 48 (proposicao)]

    funcao              go to state 16
    corpo               go to state 51
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 18

    6 lista_parametros: parametro •
    7                 | parametro • lista_parametros

    NOME  shift, and go to state 52

    NOME      [reduce using rule 6 (lista_parametros)]
    $default  reduce using rule 6 (lista_parametros)

    lista_parametros  go to state 53
    parametro         go to state 18


State 19

    5 funcao: FN NOME corpo • RETURN
   11 corpo: corpo • corpo

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 54

    FN        [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 48 (proposicao)]

    funcao              go to state 16
    corpo               go to state 55
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 20

    9 corpo: expressoes •

    $default  reduce using rule 9 (corpo)


State 21

   42 proposicao: declaracaoVariavel •

    $default  reduce using rule 42 (proposicao)


State 22

   15 expressoes: unarias • NOME
   16           | unarias • NUMERO

    NUMERO  shift, and go to state 56
    NOME    shift, and go to state 57


State 23

   45 proposicao: valor • ADDSUB

    ADDSUB  shift, and go to state 58


State 24

   10 corpo: proposicao •

    $default  reduce using rule 10 (corpo)


State 25

   44 proposicao: desvioFluxo •

    $default  reduce using rule 44 (proposicao)


State 26

   43 proposicao: atribuicao •

    $default  reduce using rule 43 (proposicao)


State 27

   17 declaracaoVariavel: VAR NOME • NUMERO

    NUMERO  shift, and go to state 59


State 28

   40 valor: NUMERO •

    $default  reduce using rule 40 (valor)


State 29

   41 valor: NOME •

    $default  reduce using rule 41 (valor)


State 30

   50 desvioFluxo: WHILE condicao • corpo

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 15

    FN        [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 48 (proposicao)]

    funcao              go to state 16
    corpo               go to state 60
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 31

   18 condicao: valor • logicas valor

    LE  shift, and go to state 61
    GE  shift, and go to state 62
    EQ  shift, and go to state 63
    NE  shift, and go to state 64
    GT  shift, and go to state 65
    LT  shift, and go to state 66

    logicas  go to state 67


State 32

   49 desvioFluxo: IF condicao • corpo

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 15

    FN        [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 48 (proposicao)]

    funcao              go to state 16
    corpo               go to state 68
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 33

   19 binarias: LE •

    $default  reduce using rule 19 (binarias)


State 34

   20 binarias: GE •

    $default  reduce using rule 20 (binarias)


State 35

   21 binarias: EQ •

    $default  reduce using rule 21 (binarias)


State 36

   22 binarias: NE •

    $default  reduce using rule 22 (binarias)


State 37

   23 binarias: GT •

    $default  reduce using rule 23 (binarias)


State 38

   24 binarias: LT •

    $default  reduce using rule 24 (binarias)


State 39

   25 binarias: AND •

    $default  reduce using rule 25 (binarias)


State 40

   26 binarias: OR •

    $default  reduce using rule 26 (binarias)


State 41

   27 binarias: ADD •

    $default  reduce using rule 27 (binarias)


State 42

   29 binarias: MULTIPLY •

    $default  reduce using rule 29 (binarias)


State 43

   30 binarias: DIVIDE •

    $default  reduce using rule 30 (binarias)


State 44

   31 binarias: MODULE •

    $default  reduce using rule 31 (binarias)


State 45

   28 binarias: SUBTRACT •

    $default  reduce using rule 28 (binarias)


State 46

   14 expressoes: NUMERO binarias • NUMERO

    NUMERO  shift, and go to state 69


State 47

   51 atribuicao: NOME NUMERO •

    $default  reduce using rule 51 (atribuicao)


State 48

   52 atribuicao: NOME NOME •

    $default  reduce using rule 52 (atribuicao)


State 49

   12 expressoes: NOME binarias • NOME
   13           | NOME binarias • NUMERO

    NUMERO  shift, and go to state 70
    NOME    shift, and go to state 71


State 50

   12 expressoes: NOME • binarias NOME
   13           | NOME • binarias NUMERO
   41 valor: NOME •
   51 atribuicao: NOME • NUMERO
   52           | NOME • NOME

    NUMERO    shift, and go to state 47
    NOME      shift, and go to state 48
    LE        shift, and go to state 33
    GE        shift, and go to state 34
    EQ        shift, and go to state 35
    NE        shift, and go to state 36
    GT        shift, and go to state 37
    LT        shift, and go to state 38
    AND       shift, and go to state 39
    OR        shift, and go to state 40
    ADD       shift, and go to state 41
    MULTIPLY  shift, and go to state 42
    DIVIDE    shift, and go to state 43
    MODULE    shift, and go to state 44
    SUBTRACT  shift, and go to state 45

    $default  reduce using rule 41 (valor)

    binarias  go to state 49


State 51

    4 funcao: FN NOME lista_parametros corpo • RETURN
   11 corpo: corpo • corpo

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 72

    FN        [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 48 (proposicao)]

    funcao              go to state 16
    corpo               go to state 55
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 52

    8 parametro: NOME •

    $default  reduce using rule 8 (parametro)


State 53

    7 lista_parametros: parametro lista_parametros •

    $default  reduce using rule 7 (lista_parametros)


State 54

    5 funcao: FN NOME corpo RETURN •
   46 proposicao: RETURN •

    FN        reduce using rule 5 (funcao)
    FN        [reduce using rule 46 (proposicao)]
    VAR       reduce using rule 5 (funcao)
    VAR       [reduce using rule 46 (proposicao)]
    WHILE     reduce using rule 5 (funcao)
    WHILE     [reduce using rule 46 (proposicao)]
    IF        reduce using rule 5 (funcao)
    IF        [reduce using rule 46 (proposicao)]
    NUMERO    reduce using rule 5 (funcao)
    NUMERO    [reduce using rule 46 (proposicao)]
    NOME      reduce using rule 5 (funcao)
    NOME      [reduce using rule 46 (proposicao)]
    SUBTRACT  reduce using rule 5 (funcao)
    SUBTRACT  [reduce using rule 46 (proposicao)]
    NOT       reduce using rule 5 (funcao)
    NOT       [reduce using rule 46 (proposicao)]
    RETURN    reduce using rule 5 (funcao)
    RETURN    [reduce using rule 46 (proposicao)]
    $default  reduce using rule 5 (funcao)


State 55

   11 corpo: corpo • corpo
   11      | corpo corpo •

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 15

    FN        [reduce using rule 11 (corpo)]
    FN        [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 11 (corpo)]
    VAR       [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 11 (corpo)]
    WHILE     [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 11 (corpo)]
    IF        [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 11 (corpo)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 11 (corpo)]
    NOME      [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 11 (corpo)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 11 (corpo)]
    NOT       [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 11 (corpo)]
    RETURN    [reduce using rule 48 (proposicao)]

    funcao              go to state 16
    corpo               go to state 55
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 56

   16 expressoes: unarias NUMERO •

    $default  reduce using rule 16 (expressoes)


State 57

   15 expressoes: unarias NOME •

    $default  reduce using rule 15 (expressoes)


State 58

   45 proposicao: valor ADDSUB •

    $default  reduce using rule 45 (proposicao)


State 59

   17 declaracaoVariavel: VAR NOME NUMERO •

    $default  reduce using rule 17 (declaracaoVariavel)


State 60

   11 corpo: corpo • corpo
   50 desvioFluxo: WHILE condicao corpo •

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 15

    FN        [reduce using rule 48 (proposicao)]
    FN        [reduce using rule 50 (desvioFluxo)]
    VAR       [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 50 (desvioFluxo)]
    WHILE     [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 50 (desvioFluxo)]
    IF        [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 50 (desvioFluxo)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 50 (desvioFluxo)]
    NOME      [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 50 (desvioFluxo)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 50 (desvioFluxo)]
    NOT       [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 50 (desvioFluxo)]
    RETURN    [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 50 (desvioFluxo)]

    funcao              go to state 16
    corpo               go to state 55
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 61

   34 logicas: LE •

    $default  reduce using rule 34 (logicas)


State 62

   35 logicas: GE •

    $default  reduce using rule 35 (logicas)


State 63

   36 logicas: EQ •

    $default  reduce using rule 36 (logicas)


State 64

   37 logicas: NE •

    $default  reduce using rule 37 (logicas)


State 65

   38 logicas: GT •

    $default  reduce using rule 38 (logicas)


State 66

   39 logicas: LT •

    $default  reduce using rule 39 (logicas)


State 67

   18 condicao: valor logicas • valor

    NUMERO  shift, and go to state 28
    NOME    shift, and go to state 29

    valor  go to state 73


State 68

   11 corpo: corpo • corpo
   49 desvioFluxo: IF condicao corpo •

    FN        shift, and go to state 1
    VAR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    NUMERO    shift, and go to state 11
    NOME      shift, and go to state 50
    SUBTRACT  shift, and go to state 13
    NOT       shift, and go to state 14
    RETURN    shift, and go to state 15

    FN        [reduce using rule 48 (proposicao)]
    FN        [reduce using rule 49 (desvioFluxo)]
    VAR       [reduce using rule 48 (proposicao)]
    VAR       [reduce using rule 49 (desvioFluxo)]
    WHILE     [reduce using rule 48 (proposicao)]
    WHILE     [reduce using rule 49 (desvioFluxo)]
    IF        [reduce using rule 48 (proposicao)]
    IF        [reduce using rule 49 (desvioFluxo)]
    NUMERO    [reduce using rule 48 (proposicao)]
    NUMERO    [reduce using rule 49 (desvioFluxo)]
    NOME      [reduce using rule 48 (proposicao)]
    NOME      [reduce using rule 49 (desvioFluxo)]
    SUBTRACT  [reduce using rule 48 (proposicao)]
    SUBTRACT  [reduce using rule 49 (desvioFluxo)]
    NOT       [reduce using rule 48 (proposicao)]
    NOT       [reduce using rule 49 (desvioFluxo)]
    RETURN    [reduce using rule 48 (proposicao)]
    RETURN    [reduce using rule 49 (desvioFluxo)]

    funcao              go to state 16
    corpo               go to state 55
    expressoes          go to state 20
    declaracaoVariavel  go to state 21
    unarias             go to state 22
    valor               go to state 23
    proposicao          go to state 24
    desvioFluxo         go to state 25
    atribuicao          go to state 26


State 69

   14 expressoes: NUMERO binarias NUMERO •

    $default  reduce using rule 14 (expressoes)


State 70

   13 expressoes: NOME binarias NUMERO •

    $default  reduce using rule 13 (expressoes)


State 71

   12 expressoes: NOME binarias NOME •

    $default  reduce using rule 12 (expressoes)


State 72

    4 funcao: FN NOME lista_parametros corpo RETURN •
   46 proposicao: RETURN •

    FN        reduce using rule 4 (funcao)
    FN        [reduce using rule 46 (proposicao)]
    VAR       reduce using rule 4 (funcao)
    VAR       [reduce using rule 46 (proposicao)]
    WHILE     reduce using rule 4 (funcao)
    WHILE     [reduce using rule 46 (proposicao)]
    IF        reduce using rule 4 (funcao)
    IF        [reduce using rule 46 (proposicao)]
    NUMERO    reduce using rule 4 (funcao)
    NUMERO    [reduce using rule 46 (proposicao)]
    NOME      reduce using rule 4 (funcao)
    NOME      [reduce using rule 46 (proposicao)]
    SUBTRACT  reduce using rule 4 (funcao)
    SUBTRACT  [reduce using rule 46 (proposicao)]
    NOT       reduce using rule 4 (funcao)
    NOT       [reduce using rule 46 (proposicao)]
    RETURN    reduce using rule 4 (funcao)
    RETURN    [reduce using rule 46 (proposicao)]
    $default  reduce using rule 4 (funcao)


State 73

   18 condicao: valor logicas valor •

    $default  reduce using rule 18 (condicao)
